# klei

./: README.md  pyproject.toml
docs/: CHANGELOG.md  README.md  api.md  architecture.md  contributing.md  deployment.md  kaizen.md  philosophy.md  quickstart.md
docs/modules/: brain.md  cli.md  cognition.md  daemon.md  health.md  lab.md  mcp.md  memory.md  organism.md  rag.md  self_heal.md  wiki.md
feed/: README.md
feed/self/: 01-identity.md  02-commands.md  03-evolve-lab.md  04-thinking-mastery.md  05-safety-truth.md  06-self-improvement-ritual.md
haki/: __init__.py  cognition.py  config.py  kaizen.py  mastery.py  organism.py  philosophy.py  self_heal.py  wiki.py
haki/brain/: __init__.py
haki/cli/: __init__.py  main.py
haki/daemon/: __init__.py  bus.py  main.py
haki/health/: __init__.py
haki/lab/: __init__.py
haki/mcp/: __init__.py
haki/memory/: __init__.py
haki/rag/: __init__.py
tests/: __init__.py  test_cognition.py  test_core.py  test_kaizen.py
